apply plugin: "com.android.application"

apply plugin: "kotlin-android"

apply plugin: "kotlin-android-extensions"

def appSdkVersion = 28
def props = new Properties()
props.put("storeFile", "\"${System.env.STOREFILE}\"")
props.put("keyAlias", "\"${System.env.KEYALIAS}\"")
props.put("keyPassword", "\"${System.env.KEYPASSWORD}\"")
props.put("storePassword", "\"${System.env.STOREPASSWORD}\"")

android {

    compileSdkVersion appSdkVersion

    defaultConfig {
        applicationId "com.smartco.app"
        minSdkVersion 16
        targetSdkVersion appSdkVersion
        versionCode 1812022107
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildToolsVersion "29.0.0"

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    flavorDimensions "version"

    productFlavors {
        idemo {
            dimension "version"
            targetSdkVersion appSdkVersion
            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
            versionCode 1812022107
            versionName "1.0"
        }
        irelease {
            dimension "version"
            targetSdkVersion appSdkVersion
            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
            versionCode 1812022107
            versionName "1.0"
        }
    }

    testOptions {
        unitTests {
            all {
                // Sets JVM argument(s) for the test JVM(s).
                jvmArgs "-XX:MaxPermSize=512m"
            }
        }
    }

    task testRelease {

    }
}

dependencies {
    implementation fileTree(include: ["*.jar"], dir: "libs")
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    implementation "androidx.appcompat:appcompat:1.0.2"
    implementation "com.google.android.gms:play-services-vision:18.0.0"
    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
    implementation "com.google.android.material:material:1.0.0"
    androidTestImplementation "androidx.test:runner:1.2.0"
    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
    // MS App Center
    def appCenterSdkVersion = "1.10.0"
    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
    // tests
    testImplementation "junit:junit:4.12"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.0"
}
